# src/files/file_service/gen_file_openapi.yaml
@@ -1,248 +1,132 @@
-# This is the OpenAPI specification for the File Service API copied here
 openapi: 3.0.0
 paths:
-  /file-api/shared-data/{filePath}:
-    head:
-      operationId: headSharedObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Shared Data
+  /health:
     get:
-      operationId: getDoObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-        - name: last-count
-          required: false
-          in: query
-          description: last-count is used to get the last count of objects in the bucket.
-            This is used for pagination of the list results.
-          schema:
-            type: string
-        - name: continuation-token
-          required: false
-          in: query
-          description: ContinuationToken indicates to that the list is being continued on
-            this bucket with a token. ContinuationToken is obfuscated and is not
-            a real key. You can use this ContinuationToken for pagination of the
-            list results.
-          schema:
-            type: string
-        - name: delimiter
-          required: false
-          in: query
-          description: Delimiter is used to group the results by a common prefix. For
-            example, if you set the delimiter to "/", the results will be
-            grouped by the first part of the path before the "/".
-          schema:
-            type: string
-        - name: recursive
-          required: false
-          in: query
-          description: if the list should be recursive, default is false and will only
-            return the folders/file within the path
-          schema:
-            type: boolean
-        - name: max-keys
-          required: false
-          in: query
-          description: max number of keys to return, cannot be more than 1000
-          schema:
-            type: number
-        - name: list-type
-          required: false
-          in: query
-          description: list objects within path (set to 2)
-          schema:
-            type: number
-        - name: prefix
-          required: false
-          in: query
-          description: path the the url
-          schema:
-            type: string
+      operationId: check
+      parameters: []
       responses:
         "200":
-          description: ""
+          description: The Health Check is successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: ok
+                  info:
+                    type: object
+                    example:
+                      database:
+                        status: up
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
+                    nullable: true
+                  error:
+                    type: object
+                    example: {}
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
+                    nullable: true
+                  details:
+                    type: object
+                    example:
+                      database:
+                        status: up
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
+        "503":
+          description: The Health Check is not successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  info:
+                    type: object
+                    example:
+                      database:
+                        status: up
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
+                    nullable: true
+                  error:
+                    type: object
+                    example:
+                      redis:
+                        status: down
+                        message: Could not connect
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
+                    nullable: true
+                  details:
+                    type: object
+                    example:
+                      database:
+                        status: up
+                      redis:
+                        status: down
+                        message: Could not connect
+                    additionalProperties:
+                      type: object
+                      required:
+                        - status
+                      properties:
+                        status:
+                          type: string
+                      additionalProperties: true
       tags:
-        - Shared Data
-    delete:
-      operationId: deleteSharedObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Shared Data
-    put:
-      operationId: putSharedObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-                  description: The file to upload
-      responses:
-        "200":
-          description: File uploaded successfully
-      tags:
-        - Shared Data
-  /file-api/do-data/{filePath}:
-    head:
-      operationId: headDoObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Do Data
+        - health
+  /{orgKey}/signedUrl/{filePath}:
     get:
-      operationId: getDoObject
+      operationId: getSignedUrl
       parameters:
-        - name: filePath
+        - name: orgKey
           required: true
           in: path
-          description: The path to the file (can include subdirectories)
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datase
           schema:
             type: string
-        - name: last-count
+        - name: upload
           required: false
           in: query
-          description: last-count is used to get the last count of objects in the bucket.
-            This is used for pagination of the list results.
-          schema:
-            type: string
-        - name: continuation-token
-          required: false
-          in: query
-          description: ContinuationToken indicates to that the list is being continued on
-            this bucket with a token. ContinuationToken is obfuscated and is not
-            a real key. You can use this ContinuationToken for pagination of the
-            list results.
-          schema:
-            type: string
-        - name: delimiter
-          required: false
-          in: query
-          description: Delimiter is used to group the results by a common prefix. For
-            example, if you set the delimiter to "/", the results will be
-            grouped by the first part of the path before the "/".
-          schema:
-            type: string
-        - name: recursive
-          required: false
-          in: query
-          description: if the list should be recursive, default is false and will only
-            return the folders/file within the path
-          schema:
-            type: boolean
-        - name: max-keys
-          required: false
-          in: query
-          description: max number of keys to return, cannot be more than 1000
-          schema:
-            type: number
-        - name: list-type
-          required: false
-          in: query
-          description: list objects within path (set to 2)
-          schema:
-            type: number
-        - name: prefix
-          required: false
-          in: query
-          description: path the the url
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Do Data
-    delete:
-      operationId: deleteDoObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Do Data
-    put:
-      operationId: putDoObject
-      parameters:
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-                  description: The file to upload
-      responses:
-        "200":
-          description: File uploaded successfully
-      tags:
-        - Do Data
-  /file-api/signedUrl/download/{orgFriendlyId}/{filePath}:
-    get:
-      operationId: getSignedUrlDownload
-      parameters:
-        - name: orgFriendlyId
-          required: true
-          in: path
-          description: The org key
+          description: returns the upload url you can use to 'put' a file if set to
+            "true", otherwise it will return a download URL used to 'get' a file
           schema:
             type: string
         - name: filePath
@@ -253,38 +137,29 @@ paths:
             type: string
       responses:
         "200":
-          description: ""
+          description: Successfully generated a signed URL for downloading/uploading the
+            file
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  url:
+                    type: string
+                    description: The generated download/upload URL
       tags:
         - Files
-  /file-api/signedUrl/upload/{orgFriendlyId}/{filePath}:
-    get:
-      operationId: getSignedUrlUpload
-      parameters:
-        - name: orgFriendlyId
-          required: true
-          in: path
-          description: The org key
-          schema:
-            type: string
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Files
-  /file-api/{orgFriendlyId}/{filePath}:
+      security:
+        - bearer: []
+  /{orgKey}/{filePath}:
     put:
       operationId: putObject
       parameters:
-        - name: orgFriendlyId
+        - name: orgKey
           required: true
           in: path
-          description: The org key
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datase
           schema:
             type: string
         - name: filePath
@@ -306,16 +181,36 @@ paths:
                   description: The file to upload
       responses:
         "200":
-          description: File uploaded successfully
+          description: File uploaded successfully with metadata about the uploaded file
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  eTag:
+                    type: string
+                    description: Entity tag for the uploaded file
+                  s3:
+                    type: object
+                    properties:
+                      bucketName:
+                        type: string
+                      bucketorgKey:
+                        type: string
+                      bucketRegion:
+                        type: string
       tags:
         - Files
+      security:
+        - bearer: []
     head:
       operationId: headObject
       parameters:
-        - name: orgFriendlyId
+        - name: orgKey
           required: true
           in: path
-          description: The org key
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datasets
           schema:
             type: string
         - name: filePath
@@ -326,16 +221,78 @@ paths:
             type: string
       responses:
         "200":
-          description: ""
+          description: Successfully retrieved metadata for the specified file. Response
+            has an empty body with file metadata in headers.
       tags:
         - Files
+      security:
+        - bearer: []
     get:
       operationId: getObject
       parameters:
-        - name: orgFriendlyId
+        - name: orgKey
           required: true
           in: path
-          description: The org key
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datase
+          schema:
+            type: string
+        - name: filePath
+          required: true
+          in: path
+          description: The path to the file (can include subdirectories)
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successfully retrieved file or directory listing
+          content:
+            application/json:
+              schema:
+                type: string
+                format: binary
+                description: File contents as StreamableFile
+      tags:
+        - Files
+      security:
+        - bearer: []
+    delete:
+      operationId: deleteObject
+      parameters:
+        - name: orgKey
+          required: true
+          in: path
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datase
+          schema:
+            type: string
+        - name: filePath
+          required: true
+          in: path
+          description: The path to the file (can include subdirectories)
+          schema:
+            type: string
+      responses:
+        "200":
+          description: File or directory successfully deleted
+          content:
+            application/json:
+              schema:
+                type: boolean
+                description: True if deletion was successful
+      tags:
+        - Files
+      security:
+        - bearer: []
+  /{orgKey}/directory/{filePath}:
+    get:
+      operationId: getObjectDirectory
+      parameters:
+        - name: orgKey
+          required: true
+          in: path
+          description: The org orgKey, or "shared" for public data set or
+            "do-internal-data" for internal datase
           schema:
             type: string
         - name: filePath
@@ -356,8 +313,8 @@ paths:
           in: query
           description: ContinuationToken indicates to that the list is being continued on
             this bucket with a token. ContinuationToken is obfuscated and is not
-            a real key. You can use this ContinuationToken for pagination of the
-            list results.
+            a real orgKey. You can use this ContinuationToken for pagination of
+            the list results.
           schema:
             type: string
         - name: delimiter
@@ -375,16 +332,10 @@ paths:
             return the folders/file within the path
           schema:
             type: boolean
-        - name: max-keys
+        - name: max-orgKeys
           required: false
           in: query
-          description: max number of keys to return, cannot be more than 1000
-          schema:
-            type: number
-        - name: list-type
-          required: false
-          in: query
-          description: list objects within path (set to 2)
+          description: max number of orgKeys to return, cannot be more than 1000
           schema:
             type: number
         - name: prefix
@@ -395,29 +346,24 @@ paths:
             type: string
       responses:
         "200":
-          description: ""
+          description: Successfully retrieved file or directory listing
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                  continuationToken:
+                    type: string
+                    nullable: true
+                description: Directory listing with optional continuation token
       tags:
         - Files
-    delete:
-      operationId: deleteObject
-      parameters:
-        - name: orgFriendlyId
-          required: true
-          in: path
-          description: The org key
-          schema:
-            type: string
-        - name: filePath
-          required: true
-          in: path
-          description: The path to the file (can include subdirectories)
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-      tags:
-        - Files
+      security:
+        - bearer: []
 info:
   title: File Service
   description: ""
