# src/platform/tools_api.py
@@ -9,12 +9,11 @@ from typing import Any, Callable, Literal, Optional
 from beartype import beartype
 import pandas as pd
 
-from deeporigin.platform import clusters_api
 from deeporigin.platform.utils import _add_functions_to_module
 
 __all__ = _add_functions_to_module(
     module=sys.modules[__name__],
-    api_name="ToolsApi",
+    api_name="FileApi",
 )
 
 
@@ -266,7 +265,6 @@ def run_tool(
     tool_key: str,
     client=None,
     org_friendly_id: Optional[str] = None,
-    clusters_client=None,
 ):
     """run any tool using provided data transfer object (DTO)
 
@@ -274,9 +272,8 @@ def run_tool(
         data (dict): data transfer object. This is typically generated by the `make_payload` function."""
 
     if "clusterId" not in data.keys():
-        data["clusterId"] = clusters_api._get_cluster_id(
-            client=clusters_client,
-            org_friendly_id=org_friendly_id,
+        raise NotImplementedError(
+            "clusterId is required to run a tool. Please use the clusters_api to get a clusterId."
         )
 
     return execute_tool(  # noqa: F821
